[package]
name = "lyon-experiments"
version = "0.1.0"
authors = ["Sébastien Wagener <sebastien.wagener@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usvg = "0.19.0"
lyon = { version = "0.17.5", features = ["svg", "serialization"]}
